[metadata]
name = pylibrb
version = file: VERSION
author = Paweł Głomski
author_email = pglomski.dev@gmail.com
description = Python bindings for the RubberBand library
long_description = file: README.md
long_description_content_type = text/markdown
license = 'GPLv2'
license_files = LICENSE
url = https://github.com/pawel-glomski/pylibrb
classifiers =
  License :: OSI Approved :: GNU General Public License v2 (GPLv2)
  Intended Audience :: Developers
  Programming Language :: Python :: 3

[options]
test_suite = tests
python_requires = >=3.8
install_requires =
  numpy

# rest of the configuration in setup.py - skbuild.setup requires some of the options to be passed
# directly to it
